# cookiecutter-python-template

./: .credentials.key  .gitignore  .pre-commit-config.yaml  1-快速入门指南.md  3-代码质量与工具指南.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  cookiecutter.json  docker-compose.yml  mkdocs.yml  pyproject.toml  代码检查集成指南.md
.github/config/: readme_config.yml
.github/scripts/: enhanced_readme_updater.py
.github/workflows/: changelog.yml  ci.yml  docs.yml  release.yml  update-readme.yml
_temp_storage/: .pre-commit-config.yaml  auto_readme_demo.py  cli.py  documentation_example.py  example_usage.py  tasks_demo.py  web_app.py
_temp_storage/config/: .credentials.enc
_temp_storage/docs/zh/: conf.py  index.rst
_temp_storage/scripts/: create_example.py  generate_changelog.py
_temp_storage/src/core/: cache.py  compatibility.py  database.py
_temp_storage/src/monitoring/: health.py  metrics.py
_temp_storage/src/utils/: decorators.py  i18n.py  logging.py
_temp_storage/tests/integration/: test_web_app.py
_temp_storage/tests/performance/: test_monitoring.py
_temp_storage/tests/unit/core/: test_cache.py  test_database.py  test_tasks.py
_temp_storage/tests/unit/monitoring/: test_health.py  test_metrics.py
_temp_storage/tests/unit/utils/: test_decorators.py
docs/: beginner_guide.md  code_quality.md  code_quality_tools.md  development_guide.md  documentation_guide.md  index.md  learning_guide.md  project_details.md  project_guide.md  quality_integration.md  quality_levels.md  quick_start.md  testing_guide.md
docs/api/: config.md  core.md  utils.md
docs/en/: conf.py  index.rst
docs/en/deployment/: index.rst
docs/en/guide/: index.rst
docs/examples/: advanced_usage.md  basic_usage.md
docs/examples/en/: conf.py
docs/examples/en/api/: index.rst
docs/examples/en/intro/: index.rst
docs/examples/zh/: conf.py
docs/examples/zh/intro/: index.rst
docs/requirements/: 需求规格说明书.md
docs/zh/api/: index.rst
docs/zh/development/: index.rst
docs/zh/guide/: index.rst
examples/: example_usage.py  secure_login_example.py
hooks/: post_gen_project.py
scripts/: create_project.py  init_project.py  validate_changelog.py
scripts/utils/: __init__.py  command.py  package_manager.py  project.py
src/: cli.py
src/config/: settings.py
src/core/: __init__.py  compatibility.py  tasks.py
src/examples/: auto_readme_demo.py
src/monitoring/: __init__.py  metrics.py
src/utils/: __init__.py  decorators.py  i18n.py  logging.py
tests/performance/: test_monitoring.py
tests/unit/core/: test_cache.py  test_database.py
tests/unit/monitoring/: test_metrics.py
tests/unit/utils/: test_i18n.py  test_logging.py
{{cookiecutter.project_slug}}/: .env.example  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/config/: readme_config.yml
{{cookiecutter.project_slug}}/.github/scripts/: check_update_type.py  enhanced_readme_updater.py  file_manager.py  test_file_manager.py
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  quality_check.yml
{{cookiecutter.project_slug}}/config/quality/advanced/: security.yaml  sonar.properties
{{cookiecutter.project_slug}}/config/quality/basic/: .flake8  .pylintrc  mypy.ini
{{cookiecutter.project_slug}}/config/quality/standard/: .pylintrc  bandit.yaml
{{cookiecutter.project_slug}}/docker/: .dockerignore
{{cookiecutter.project_slug}}/docs/: code_quality_config.md  index.md  quality_examples.md
{{cookiecutter.project_slug}}/examples/: auto_readme_demo.py  secure_login_example.py
{{cookiecutter.project_slug}}/quality_checks/: advanced_checks.toml  basic_checks.toml  standard_checks.toml
{{cookiecutter.project_slug}}/scripts/: check.sh  run_quality_checks.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  data_processor.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/config/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/core/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/utils/: __init__.py
{{cookiecutter.project_slug}}/tests/: test_data_processor.py  test_version.py
{{cookiecutter.project_slug}}/tests/quality_examples/: test_advanced_checks.py  test_basic_checks.py  test_standard_checks.py
